last endpoints added, [user] 'list endpoints' and 'submit Completion' require docs update
