# backend/docs/swagger.yaml
@@ -1,5 +1,33 @@
 basePath: /api/v1
 definitions:
+  dto.EndpointCreate:
+    properties:
+      description:
+        example: creates new user and return access token
+        type: string
+      details:
+        additionalProperties: {}
+        type: object
+      method:
+        enum:
+        - GET
+        - POST
+        - PUT
+        - PATCH
+        - DELETE
+        example: POST
+        type: string
+      name:
+        example: user sign-up endpoint
+        type: string
+      path:
+        example: /user/sign-up
+        type: string
+    required:
+    - method
+    - name
+    - path
+    type: object
   dto.HttpErr:
     properties:
       err:
@@ -61,6 +89,19 @@ definitions:
     required:
     - project_id
     - project_name
+    type: object
+  dto.ServiceCreate:
+    properties:
+      name:
+        example: user
+        type: string
+      project_id:
+        example: 550e8400-e29b-41d4-a716-446655440000
+        format: uuid
+        type: string
+    required:
+    - name
+    - project_id
     type: object
   dto.UserAuthResponse:
     properties:
@@ -163,7 +204,7 @@ paths:
       summary: create new project
       tags:
       - project
-  /project/{id}/contributors:
+  /project/{project_id}/contributors:
     get:
       parameters:
       - description: Project id
@@ -202,7 +243,7 @@ paths:
       summary: list project members
       tags:
       - project
-  /project/{id}/invite/{username}:
+  /project/{project_id}/invite/{username}:
     delete:
       parameters:
       - description: Project id
@@ -285,6 +326,140 @@ paths:
       summary: invite to project
       tags:
       - project
+  /service:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: access token 'Bearer {token}'
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: body
+        in: body
+        name: RequestBody
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceCreate'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.OkResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.HttpErr'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.HttpErr'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/dto.HttpErr'
+      security:
+      - Bearer: []
+      summary: create new service inside of project
+      tags:
+      - service
+  /service/{service_id}/endpoint:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: access token 'Bearer {token}'
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: body
+        in: body
+        name: RequestBody
+        required: true
+        schema:
+          $ref: '#/definitions/dto.EndpointCreate'
+      - description: Service Id
+        in: path
+        name: service_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.OkResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.HttpErr'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.HttpErr'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/dto.HttpErr'
+      security:
+      - Bearer: []
+      summary: create new endpoint inside of service
+      tags:
+      - service
+  /service/{service_id}/endpoint/{endpoint_id}/assign/{username}:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: access token 'Bearer {token}'
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Service Id
+        in: path
+        name: service_id
+        required: true
+        type: string
+      - description: Endpoint Id
+        in: path
+        name: endpoint_id
+        required: true
+        type: string
+      - description: username
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.OkResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.HttpErr'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.HttpErr'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/dto.HttpErr'
+      security:
+      - Bearer: []
+      summary: assign endpoint to contributor
+      tags:
+      - service
   /user/projects:
     get:
       parameters:
@@ -309,6 +484,58 @@ paths:
       security:
       - Bearer: []
       summary: get list of user projects
+      tags:
+      - user
+  /user/projects/{project_id}/endpoints:
+    get:
+      parameters:
+      - description: access token 'Bearer {token}'
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.ProjectView'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.HttpErr'
+      security:
+      - Bearer: []
+      summary: get list of user endpoints inside given project
+      tags:
+      - user
+  /user/projects/{project_id}/endpoints/{endpoint_id}:
+    post:
+      parameters:
+      - description: access token 'Bearer {token}'
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.ProjectView'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.HttpErr'
+      security:
+      - Bearer: []
+      summary: submit completion of endpoint
       tags:
       - user
   /user/sign-in:
